[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-menubar-monitor"
version = "1.0.0"
description = "macOS menu bar monitor for Claude Code subscription usage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "rumps>=0.4.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
claude-monitor = "claude_menubar:main"

[tool.setuptools]
py-modules = ["claude_menubar"]
